<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            >


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/adora"
                android:text="@string/edit_profile"
                />

            <ImageView
                android:id="@+id/imgCompleteProfile"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/texttips"
                />


            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:fontFamily="@font/beauty"
                android:textSize="20dp"
                />


            <EditText
                android:id="@+id/txtName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="@font/beauty"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:fontFamily="@font/beauty"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:fontFamily="@font/beauty"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                />


            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/save"
                android:background="@drawable/radius"
                android:textColor="@android:color/white"
                />

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/txtChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_pass"
                />

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginBottom="60dp"
                />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        >
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:progressTint="@color/colorPrimary"
            android:visibility="gone"
            />

    </RelativeLayout>


</FrameLayout>