<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteProfile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:fontFamily="@font/maxwell_bold"
            android:textSize="40sp"
            android:gravity="center"
            android:layout_marginTop="50dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical"
            android:gravity="center"
            >

            <!-- TODO: Update blank fragment layout -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_img"
                android:textSize="20sp"
                android:fontFamily="@font/beauty"
                />

            <ImageView
                android:id="@+id/imgCompleteProfile"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="20sp"
                android:fontFamily="@font/beauty"
                android:layout_marginTop="40dp"
                />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="20sp"
                android:fontFamily="@font/beauty"
                android:layout_marginTop="30dp"
                />

            <RadioGroup
                android:id="@+id/radio_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_marginTop="10dp"
                    />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    />

            </RadioGroup>

        </LinearLayout>

        <ImageView
            android:id="@+id/img_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_navigate_next_black"
            android:layout_marginTop="20dp"
            />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:progressTint="@color/colorPrimary"
            android:padding="100dp"
            android:visibility="gone"
            />

    </RelativeLayout>


</RelativeLayout>

