<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backlogin"
    tools:context=".Login">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#9cffdd99"
        android:gravity="center_vertical"
        >

            <TextView
                android:id="@+id/JudulLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="100sp"
                android:fontFamily="@font/adora"
                android:gravity="center"
                android:textColor="@android:color/holo_orange_light"
                android:textStyle="bold"

                />

            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/email"
                android:paddingLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                />

            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/key"
                android:paddingLeft="10dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:gravity="center"
                android:layout_marginTop="160dp"
                android:layout_gravity="center"
                android:background="@drawable/radius"
                android:textColor="@android:color/white"
                android:fontFamily="@font/maxwell_bold"
                android:textSize="30sp"
                android:padding="10dp"

                />




            <TextView
                android:id="@+id/goToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toRegis"
                android:fontFamily="@font/maxwell_bold"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:background="#0cffdd99"
                android:layout_marginTop="10dp"
                />







    </LinearLayout>






</RelativeLayout>